# iDeliveryBot

./: .gitignore  LICENSE  README.md  docker-compose.debug.yml  docker-compose.yml  srv_setup.py
iDelivery_bot_logic/devel/: .catkin  local_setup.sh  setup.sh
iDelivery_bot_logic/devel/include/delivery/: Call.h  CallRequest.h  CallResponse.h  Cmd.h  Map.h  MapRequest.h  MapResponse.h  Pose.h  Status.h
iDelivery_bot_logic/devel/lib/pkgconfig/: delivery.pc
iDelivery_bot_logic/devel/lib/python3/dist-packages/delivery/msg/: _Cmd.py  _Pose.py  _Status.py  __init__.py
iDelivery_bot_logic/devel/lib/python3/dist-packages/delivery/srv/: _Call.py  _Map.py  __init__.py
iDelivery_bot_logic/devel/share/common-lisp/ros/delivery/msg/: Cmd.lisp  Pose.lisp  Status.lisp  _package.lisp  _package_Cmd.lisp  _package_Pose.lisp  _package_Status.lisp  delivery-msg.asd
iDelivery_bot_logic/devel/share/common-lisp/ros/delivery/srv/: Call.lisp  Map.lisp  _package.lisp  _package_Call.lisp  _package_Map.lisp  delivery-srv.asd
iDelivery_bot_logic/devel/share/delivery/cmake/: delivery-msg-extras.cmake  delivery-msg-paths.cmake  deliveryConfig.cmake
iDelivery_bot_logic/devel/share/gennodejs/ros/delivery/msg/: Cmd.js  Pose.js  Status.js  _index.js
iDelivery_bot_logic/devel/share/gennodejs/ros/delivery/srv/: Call.js  Map.js  _index.js
iDelivery_bot_logic/devel/share/roseus/ros/delivery/: manifest.l
iDelivery_bot_logic/devel/share/roseus/ros/delivery/msg/: Cmd.l  Pose.l  Status.l
iDelivery_bot_logic/devel/share/roseus/ros/delivery/srv/: Call.l  Map.l
iDelivery_bot_logic/src/: Monitor_thread.cpp  Monitor_thread.h
iDelivery_bot_logic/src/delivery/: CMakeLists.txt  iDelivery_bot_logic.cpp  package.xml
iDelivery_bot_logic/src/delivery/msg/: Cmd.msg
iDelivery_bot_logic/src/delivery/srv_monitor/: message_creator.h  srv_monitor.h  users.csv
iDelivery_bot_logic/src/delivery/srv_monitor/Communication/: Client.h
iDelivery_bot_logic/src/delivery/srv_monitor/Requests/Body/: body_types.cpp
iDelivery_bot_logic/src/delivery/srv_monitor/products/: in.txt
iDelivery_bot_logic/src/srv_monitor/: a.out  makefile  message_creator.cpp  message_creator.h  msg_test_full.cpp  srv_monitor.cpp  srv_monitor.h  test.cpp
iDelivery_bot_logic/src/srv_monitor/Communication/: Client.cpp  Client.h
iDelivery_bot_logic/src/srv_monitor/Requests/: req.cpp  req.h  req_parser.cpp  req_parser.h  test_parser.cpp
iDelivery_bot_logic/src/srv_monitor/Requests/Body/: body_tests.cpp  body_types.cpp  body_types.h  req_body.cpp  req_body.h  str_utils.h
iDelivery_bot_logic/src/srv_monitor/Tests/: body_tests.cpp  monitor_test.cpp  monitor_thread_test.cpp  msg_test_full.cpp  node_comm.cpp  test_parser.cpp
iDelivery_bot_logic/src/srv_monitor/products/: a.out  in.txt  log.txt  log_req.txt  out.txt
logic/.catkin_tools/profiles/default/: devel_collisions.txt
logic/src/agents_lib/: CMakeLists.txt  package.xml
logic/src/agents_lib/include/agents_lib/: agent.h  bot.h  user.h  utils.h
logic/src/agents_lib/src/: agent.cpp  bot.cpp  user.cpp  utils.cpp
logic/src/delivery/: CMakeLists.txt  package.xml
logic/src/delivery/msg/: Req.msg  Res.msg  Status.msg
logic/src/delivery/src/: main.cpp
logic/src/monitor/: CMakeLists.txt  package.xml
logic/src/monitor/msg/: req.msg
logic/src/monitor/src/: main.cpp
logic/src/pos_update/: CMakeLists.txt  package.xml
logic/src/pos_update/src/: main.cpp
logic/src/srv_monitor_lib/: CMakeLists.txt  package.xml
logic/src/srv_monitor_lib/include/srv_monitor_lib/: Client.h  body_types.h  message_creator.h  req.h  req_parser.h  srv_monitor.h  str_utils.h
logic/src/srv_monitor_lib/src/: Client.cpp  body_types.cpp  message_creator.cpp  req.cpp  req_parser.cpp  srv_monitor.cpp
src/: app.js  package.json  requests.js  send_msg.js
src/HTTP_Server/: rcv_msg.js  requests.js  send_msg.js
src/Monitor/: comm_handler.js  m_rcv_msg.js  m_send_msg.js
srv_monitor/Communication/: Client.cpp
srv_monitor/Requests/: req.cpp  req.h
srv_monitor/Requests/Body/: body_types.cpp
srv_monitor/Tests/: node_comm.cpp
srv_node/: Dockerfile  app.js  package-lock.json  package.json
srv_node/HTTP_Handlers/: arrived_handler.js  call_handler.js  cancel_handler.js  login_handler.js  obj_rcv_handler.js  obj_send_handler.js  obj_sent_handler.js  requests.js  robo_pos_handler.js  robo_pos_periodic_update.js  send_handler.js  timeout_handler.js
srv_node/HTTP_Server/: requests.js
srv_node/Monitor/: comm_handler.js  m_rcv_msg.js  m_send_msg.js  monitor_event_handler.js  pos_monitor_handler.js  robo_pos_handler.js
srv_node/schemas/: bot.js  user.js
srv_node/test/: create_bots.js  create_users.js
srv_node/test/linux/: create_bots.js  create_users.js
srv_node/test/osx/: create_bots.js  create_users.js  test_res.js
utils/: dl.conf  setup.sh
utils/scripts/: check_dep_and_run.py  colors.py  install_dependencies.py  my_thread.py  srv_setup.py
utils/srv_monitor/: a.out  message_creator.cpp
utils/srv_monitor/Communication/: Client.h
utils/srv_monitor/Requests/: req_parser.cpp
utils/srv_monitor/Requests/Body/: body_types.h
utils/srv_monitor/Tests/: csv_parser.cpp  msg_test_full.cpp  test_parser.cpp
